# babata

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  STREAMING-INPUT-CHANGELOG.md  STREAMING_INPUT_DESIGN.md  auto-update.sh  bb  bot.py  bridge.py  cc.py  constants.py  evolution-log.jsonl  index.html  install.sh  media.py  memory_health.py  pyproject.toml  setup.py  smoke_test_weixin.py  smoke_test_weixin_mcp.py  telegraph.py  tg_mcp.py  weixin_account.py  weixin_bot.py  weixin_bridge.py  weixin_ilink.py  weixin_mcp.py  wizard.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: smoke.yml
babata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: com.babata.plist.template  persist-macos.md
hooks/: session-end.sh  session-start.sh
scripts/: auto-update.sh  poll-healthcheck.sh  self-ops.sh
tests/: conftest.py  leak_guard.sh  smoke.sh  test_channel_worker.py  test_live_session.py  test_wx_split_safety.py
