[project]
name = "babata"
version = "0.1.0"
description = "Thin Telegram transport layer for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=22.0",
    "claude-agent-sdk>=0.1.39",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "cryptography>=42.0",
    "pilk>=0.2.4",
    "qrcode>=7.4",
]

[project.scripts]
babata = "bot:main"
